# cddlt

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cddlt/: __init__.py  dlmodule.py  loss.py  startup.py  value.py
cddlt/dataloaders/: downscaling_transform.py
cddlt/datasets/: cordex_dataset.py  cordex_rekis_dataset.py  netcdf_dataset.py  netcdf_residual_dataset.py  rekis_dataset.py
cddlt/models/: bicubic.py  deepesdpr.py  deepesdtas.py  diffusion.py  edsr.py  espcn.py  fno.py  srcnn.py  swinir.py
dl_tools/: dlmodule.py  loss.py  startup.py  value.py
dl_tools/datasets/: cordex_dataset.py  cordex_rekis_dataset.py  netcdf_dataset.py  rekis_dataset.py
dl_tools/models/: bicubic.py  deepesdpr.py  deepesdtas.py  espcn.py  fno.py  srcnn.py
tests/: datasets_test.py  diff_models_test.py  generate_test_data.py  models_test.py
