[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cddlt"
dynamic = ["version"]
authors = [
    {name = "Petr Kostal", email = "kostape4@cvut.cz"},
]
maintainers = [
    {name = "Petr Kostal", email = "kostape4@cvut.cz"},
]
description = "Climate downscaling deep learning tools."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["climate downscaling", "super resolution", "deep learning", "machine learning"]
license = { file = "LICENSE" }
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "timm==1.0.17",
    "torch==2.3.0",
    "tensorboard>=2.10",
    "torchmetrics==1.7.3",
    "tqdm==4.65.0",
    "xarray==2023.6.0",
    "netcdf4==1.6.5",
    "h5netcdf==1.3.0",
    "dask[array]>=2023.4.0",
    "rasterio==1.4.3",
    "rioxarray==0.14.1",
]

[tool.setuptools.packages]
find = {} 

[tool.setuptools_scm]
